--- a/Enigma/Enigma.csproj
+++ b/Enigma/Enigma.csproj
@@ -55,6 +55,12 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="StarField\StarFieldView.xaml.cs">
+      <DependentUpon>StarFieldView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="StarField\StarFieldViewModel.cs" />
+    <Compile Include="ViewModel\EnigmaViewModel.cs" />
+    <Compile Include="ViewModel\NavigationViewModel.cs" />
     <Compile Include="ViewModel\UserViewModel.cs" />
     <Compile Include="View\enigma.xaml.cs">
       <DependentUpon>enigma.xaml</DependentUpon>
@@ -74,6 +80,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="StarField\StarFieldView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="View\enigma.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
